# Web-Scraping

./: README.md  Untitled.ipynb  pyproject.toml  test_web_scraping.py  web_scraber.py  web_scraper.py
