[tool.poetry]
name = "web_scraping"
version = "0.1.0"
description = ""
authors = ["Mahmoud alzoubi <mahmoudalzoubi073@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.25.1"
jupyter = "^1.0.0"
lab = "^6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
